@@ -102,7 +102,7 @@ public:
 
   static void delete_c_str_vec (const char * const*);
 
-  std::ostream& list_in_columns (std::ostream&) const;
+  std::ostream& list_in_columns (std::ostream&, int width = 0) const;
 };
 
 #endif
